# HandLearnerAcquisition

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py
app/: CMakeLists.txt  main.cpp
app/assets/: arm.xcf
app/inc/App/: App.h  ArmStatistics.h  Component.h  _3DVisualization.h
app/inc/Control/: Event.h  Logger.h  Singleton.h  Statics.h  Tools.h
app/inc/DataControl/: BLEManager.h  Hand.h  HandPart.h  Statics.h
app/src/App/: App.cpp  ArmStatistics.cpp  _3DVisualization.cpp
app/src/Control/: Event.cpp  Logger.cpp  Tools.cpp
app/src/DataControl/: BLEManager.cpp  Hand.cpp  HandPart.cpp
cmake/: LoadRaygui.cmake  LoadSimpleBLE.cmake
esp32_app/: platformio.ini
esp32_app/src/: main.cpp
